third_party/WebKit/Source/core/style/ComputedStyleTest.cpp
@@ -78,4 +78,18 @@ TEST(ComputedStyleTest, Preserve3dForceStackingContext) {
   EXPECT_TRUE(style->isStackingContext());
 }
 
+TEST(ComputedStyleTest, FirstPublicPseudoStyle) {
+  RefPtr<ComputedStyle> style = ComputedStyle::create();
+  style->setHasPseudoStyle(PseudoIdFirstLine);
+  EXPECT_TRUE(style->hasPseudoStyle(PseudoIdFirstLine));
+  EXPECT_TRUE(style->hasAnyPublicPseudoStyles());
+}
+
+TEST(ComputedStyleTest, LastPublicPseudoStyle) {
+  RefPtr<ComputedStyle> style = ComputedStyle::create();
+  style->setHasPseudoStyle(PseudoIdScrollbar);
+  EXPECT_TRUE(style->hasPseudoStyle(PseudoIdScrollbar));
+  EXPECT_TRUE(style->hasAnyPublicPseudoStyles());
+}
+
 }  // namespace blink
